# XinyanBot

./: README.md  main.py  pyproject.toml  requirements.txt
src/components/: music.py  voice.py
src/songs/: songs.py
