[tool.poetry]
name = "xinyanbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wavelink = "^0.9.10"
spotipy = "^2.19.0"
Flask = "^2.0.1"
PyNaCl = "^1.4.0"
DiscordUtils = "^1.3.4"
discord = "^1.7.3"
youtube_dl = "^2021.6.6"
aiocron = "^1.7"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
